--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js">
     <head>
-        <meta charset="utf-8!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!">
+        <meta charset="utf-8!AAAAAAAAAAAAAAAAAAAAAAAAA">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Merge test</title>
         <meta name="description" content="">
