--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html class="no-js">
-    <head>asdasdasdsd
+    <head>asdasdasdsdasdasdasdasasd
         <meta charset="utf-8!AAAAAAAAAAAAAAAAAAAAAAAAABBBB">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Testing master</title>
