--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>TEST
             <meta charset="utf-8!AAAAAAAAAAAAAAAAAAAAAAAAABBBB">
-
+ <meta charset="utf-8!AAAAAAAAAAAAAAAAAAAAAAAAABBBB">
         <meta charset="utf-8!AAAAAAAAAAAAAAAAAAAAAAAAABBBB">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Testing master</title>
